--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="w-screen overflow-x-hidden bg-white">
         <!-- Top Section Start  -->
-        <section id="topbar" class="w-full h-fit fixed hidden md:flex justify-center items-center z-100">
+        <section id="topbar" class="w-full h-fit fixed hidden lg:flex justify-center items-center z-100">
                 <ul class="w-1/2 text-black flex justify-between">
                         <li><i class="fa-solid m-4 fa-phone-volume gradient-icon text-[20px]"></i><span>(000)
                                         967-237-96</span></li>
@@ -26,40 +26,7 @@
         <!-- Top Section End  -->
 
         <!-- navbar start -->
-        <!-- <nav id="navbar" class="w-full h-auto lg:px-72 flex justify-center items-center fixed lg:top-12 top-0 z-100">
-                <div id="navbar_main"
-                        class="gradient-bg w-full flex justify-between items-center px-3 py-5 lg:rounded-lg ">
-                        <div class="w-fit">
-                                <img src="./src/img/Logo_1.webp" alt="Logo">
-                        </div>
-
-                        <div class="w-4/6 justify-center items-center hidden lg:flex">
-                                <ul class="w-8/12 text-white text-sm font-bold flex items-center justify-between">
-                                        <li>HOME <span><i class="fa-solid fa-arrow-down-long text-[9px]"></i></span>
-                                        </li>
-                                        <li>PAGES <span><i class="fa-solid fa-arrow-down-long text-[9px]"></i></span>
-                                        </li>
-                                        <li>ABOUT</li>
-                                        <li>ECOMMERCE <span><i
-                                                                class="fa-solid fa-arrow-down-long text-[9px]"></i></span>
-                                        </li>
-                                        <li>BLOG</li>
-                                        <li>CONTACT</li>
-                                </ul>
-                        </div>
-
-                        <div class="w-fit flex justify-center items-center gap-3">
-                                <span class="text-white/80 border px-3 py-2 rounded-full "><i
-                                                class="fa-solid fa-bag-shopping "></i></span>
-                                <button
-                                        class="w-fit bg-white border border-white rounded-lg text-black font-semibold font-serif text-sm py-4 px-9 hidden md:block ">GET
-                                        FREE QUATE</button>
-                        </div>
-
-                </div>
-        </nav> -->
-
-        <nav id="navbar" class="w-screen h-auto lg:px-72 flex justify-center items-center fixed md:top-12 top-0 z-100">
+        <nav id="navbar" class="w-screen h-auto lg:px-72 flex justify-center items-center fixed lg:top-12 top-0 z-100">
                 <div id="navbar_main"
                         class="gradient-bg w-full flex justify-between items-center px-3 py-5 lg:rounded-lg">
                         <div class="w-fit">
@@ -112,8 +79,8 @@
         <section class="w-full h-full flex flex-col md:flex-row bg-white relative top-16 md:top-0">
                 <!-- Left Content -->
                 <div
-                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 md:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
-                        <h1 class="text-4xl md:text-8xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
+                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 lg:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
+                        <h1 class="text-4xl lg:text-8xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
                         <p class="font-semibold text-lg md:text-xl pr-4 md:pr-40">
                                 Sagittis purus amet volutpat consequat mauris nunc congue nisi and tortor.
                         </p>
@@ -136,7 +103,6 @@
                         <img src="/src/img/brand__badge__inner.webp" alt="Inner" class="absolute w-5 md:w-16 " />
                 </div>
         </section>
-
         <!-- hero section end  -->
 
         <!-- Logo Carousel Animation Start  -->
@@ -168,23 +134,23 @@
 
         <!-- About Section Start  -->
         <section
-                class="w-full h-screen bg-white px-6 md:px-72 flex flex-col md:flex-row justify-between items-center gap-10 md:gap-20 text-black">
-                <div class="w-full relative flex justify-center md:justify-start">
+                class="w-full h-screen bg-white px-6 lg:px-72 flex flex-col lg:flex-row justify-between items-center gap-10 lg:gap-20 text-black">
+                <div class="w-full relative flex justify-center lg:justify-start">
                         <img src="./src/img/about__2.webp" alt="About_Main_Img" class="w-full md:w-auto">
                         <img src="./src/img/about__small__img__2.webp" alt="About_Icon"
                                 class="absolute top-10 md:top-16 right-10 md:right-40 w-16 md:w-auto">
                         <h2 class="text-5xl md:text-8xl font-bold absolute bottom-6 md:bottom-10">About Us</h2>
                 </div>
 
-                <div class="w-full space-y-6 md:space-y-8 px-4 md:px-0">
+                <div class="w-full h-full space-y-6 lg:space-y-8 px-4 lg:px-0">
                         <button
-                                class="border border-purple-400/20 rounded-full px-5 md:px-7 py-2 text-sm md:text-md gradient-icon">
+                                class="border border-purple-400/20 rounded-full px-5 lg:px-7 py-2 text-sm lg:text-md gradient-icon">
                                 About Company
                         </button>
-                        <h2 class="text-2xl md:text-4xl font-bold leading-8 md:leading-12">
+                        <h2 class="text-2xl lg:text-4xl font-bold leading-8 lg:leading-12">
                                 QUALITY CONSULTATION FOR SECURE BUSINESS. WE HAVE 32 YEARS OF EXPERIENCE.
                         </h2>
-                        <div class="flex flex-col md:flex-row gap-6 md:gap-10">
+                        <div class="flex flex-col md:flex-row gap-5 md:gap-10">
                                 <div
                                         class="w-full md:w-1/3 h-fit relative gradient-bg py-6 md:py-10 rounded-lg text-center">
                                         <i class="fa-solid fa-arrow-up absolute top-4 md:top-7 right-6 md:right-12 text-lg rotate-45"
@@ -192,7 +158,7 @@
                                         <h2 class="text-4xl md:text-6xl font-bold text-white">29</h2>
                                         <p class="font-semibold text-white">Years Experience</p>
                                 </div>
-                                <div class="w-full md:w-2/3 space-y-4 md:space-y-5">
+                                <div class="w-full md:w-2/3  lg:space-y-5">
                                         <h3 class="text-2xl md:text-3xl font-semibold underline">Mission & Vision</h3>
                                         <p class="font-semibold leading-6 md:leading-8 tracking-wide">
                                                 Lorem ipsum dolor sit amet, consectetur adi elit,
@@ -211,7 +177,7 @@
         <!-- About Section End  -->
 
         <!-- Service Section Start  -->
-        <section class="w-full h-full bg-[#fff0fa] flex flex-col justify-center items-center gap-12 text-black pt-20 mt-8 md:mt-0"
+        <section class="w-full h-full bg-[#fff0fa] flex flex-col justify-center items-center gap-12 text-black pt-20 mt-20 lg:mt-0"
                 style="background-image: url('/src/img/service__bg.png');">
 
                 <div class="flex flex-col justify-center items-center space-y-8">
@@ -222,7 +188,7 @@
                         </h2>
                 </div>
 
-                <div class="flex flex-col md:flex-row justify-between items-center gap-10 space-y-5 md:space-y-0">
+                <div class="flex flex-col lg:flex-row justify-between items-center gap-10 space-y-5 lg:space-y-0">
                         <div
                                 class="w-96 h-full bg-white py-12 px-14 flex flex-col rounded-lg space-y-6 hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300">
                                 <div class="flex justify-between items-center">
@@ -288,13 +254,14 @@
                                         }
                                 </style>
 
-                                <div>
+                                <div class="absolute top-8 right-8 w-[20vw]">
 
-                                        <img src="./src/img/video__4.webp" alt="Video_Main"
-                                                class="absolute top-[20%] right-[20%] hidden md:block">/
-                                        <div
-                                                class="bg-white w-14 h-14 md:w-28 md:h-28 rounded-full absolute top-[50%] right-[60%] flex justify-center items-center hover:bg-pink-600">
-                                                <i class="fa-solid fa-play" style="color: #fa3200;"></i>
+                                        <div class="relative w-fit hidden md:block">
+                                                <img src="./src/img/video__4.webp" alt="Video_Main">
+                                                <div
+                                                        class="bg-white h-16 w-16 lg:w-28 lg:h-28 rounded-full absolute top-[45%] right-[35%] flex justify-center items-center hover:bg-pink-600">
+                                                        <i class="fa-solid fa-play" style="color: #fa3200;"></i>
+                                                </div>
                                         </div>
                                 </div>
                         </div>
@@ -798,29 +765,6 @@
 
         <!-- Navbar Position Query -->
         <script>
-                // window.addEventListener("scroll", function () {
-                //         var navbar = document.getElementById("navbar");
-                //         var navbar_2 = document.getElementById("navbar_main");
-                //         var topbar = document.getElementById("topbar");
-
-                //         if (window.scrollY > 50) {
-                //                 navbar.classList.remove("px-72");
-                //                 navbar_2.classList.add("px-72", "fixed", "top-0");
-                //                 navbar_2.classList.remove("rounded-lg");
-
-                //                 topbar.classList.add("hidden");
-                //                 topbar.classList.remove("flex", "fixed");
-
-                //         } else {
-                //                 navbar.classList.add("px-72");
-                //                 navbar_2.classList.remove("px-72", "fixed", "top-0", "rounded-lg");
-                //                 navbar_2.classList.add("rounded-lg");
-
-                //                 topbar.classList.remove("hidden");
-                //                 topbar.classList.add("flex", "fixed");
-                //         }
-                // });
-                // 
                 document.getElementById("menu-toggle").addEventListener("click", function () {
                         document.getElementById("mobile-menu").classList.remove("hidden");
                 });
