--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="./src/css/output.css" rel="stylesheet">
 </head>
 
-<body class="w-screen overflow-x-hidden bg-white">
+<body class="w-full overflow-x-hidden bg-white">
         <!-- Top Section Start  -->
         <section id="topbar" class="w-full h-fit fixed hidden lg:flex justify-center items-center z-100">
                 <ul class="w-1/2 text-black flex justify-between">
@@ -25,7 +25,7 @@
         <!-- Top Section End  -->
 
         <!-- navbar start -->
-        <nav id="navbar" class="w-screen h-auto lg:px-72 flex justify-center items-center fixed lg:top-12 top-0 z-100">
+        <nav id="navbar" class="w-full h-auto 2xl:px-72 flex justify-center items-center fixed lg:top-12 top-0 z-100">
                 <div id="navbar_main"
                         class="gradient-bg w-full flex justify-between items-center px-3 py-5 lg:rounded-lg">
                         <div class="w-fit">
@@ -60,10 +60,10 @@
 
                 <!-- Mobile Menu -->
                 <div id="mobile-menu"
-                        class="lg:hidden fixed top-0 left-0 w-screen h-full bg-black bg-opacity-90 hidden flex-col items-center justify-center text-white text-xl space-y-6">
+                        class=" lg:hidden fixed top-0 left-0 w-screen h-full gradient-bg bg-opacity-90 hidden flex-col items-center justify-center text-white text-xl space-y-6">
                         <button id="menu-close" class="absolute top-5 right-5 text-3xl">&times;</button>
-                        <ul class="space-y-4 text-center">
-                                <li>HOME</li>
+                        <ul class="space-y-8 flex justify-center items-center flex-col py-20">
+                                <li class="w-fit font-bold bg-white text-pink-600 p-3 rounded-lg">HOME</li>
                                 <li>PAGES</li>
                                 <li>ABOUT</li>
                                 <li>ECOMMERCE</li>
@@ -75,11 +75,11 @@
         <!-- navbar end  -->
 
         <!-- hero section start  -->
-        <section class="w-full h-full flex flex-col md:flex-row bg-white relative top-16 md:top-0">
+        <section class="w-full h-full flex flex-col md:flex-row bg-white relative top-20 lg:top-0">
                 <!-- Left Content -->
                 <div
-                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 xl:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
-                        <h1 class="text-4xl lg:text-8xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
+                        class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 2xl:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
+                        <h1 class="text-4xl md:text-5xl 2xl:text-7xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
                         <p class="font-semibold text-lg md:text-xl pr-4 md:pr-40"> Sagittis purus amet volutpat
                                 consequat mauris nunc congue nisi and tortor. </p>
                         <button
@@ -104,16 +104,16 @@
 
         <!-- Logo Carousel Animation Start  -->
         <div class="w-screen flex items-center relative -top-5">
-                <div class="bg-main w-full py-6 md:py-10 flex flex-nowrap rotate-1">
+                <div class="bg-main w-full py-6 md:py-10 flex flex-nowrap rotate-1 overflow-hidden">
                         <!-- Marquee Container -->
                         <div
                                 class="flex items-center justify-center md:justify-start space-x-10 md:space-x-20 animate-infinite-scroll">
                                 <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8" />
                                 <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8" />
                                 <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8" />
-                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden md:block" />
-                                <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8 hidden md:block" />
-                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden md:block" />
+                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden 2xl:block" />
+                                <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8 hidden 2xl:block" />
+                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden 2xl:block" />
                         </div>
                         <!-- Duplicate for Infinite Scroll Effect -->
                         <div class="flex items-center justify-center md:justify-start space-x-10 md:space-x-20 animate-infinite-scroll"
@@ -121,9 +121,9 @@
                                 <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8" />
                                 <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8" />
                                 <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8" />
-                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden md:block" />
-                                <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8 hidden md:block" />
-                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden md:block" />
+                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden 2xl:block" />
+                                <img src="./src/img/brand__1.webp" alt="Logo" class="h-6 md:h-8 hidden 2xl:block" />
+                                <img src="./src/img/brand__2.webp" alt="Shape" class="h-6 md:h-8 hidden 2xl:block" />
                         </div>
                 </div>
         </div>
@@ -131,12 +131,12 @@
 
         <!-- About Section Start  -->
         <section
-                class="w-full h-screen bg-white px-6 lg:px-72 flex flex-col lg:flex-row justify-between items-center gap-10 lg:gap-20 text-black">
+                class="w-full h-full py-10 bg-white px-6 lg:px-72 flex flex-col xl:flex-row justify-between items-center gap-10 lg:gap-20 text-black">
                 <div class="w-full relative flex justify-center lg:justify-start">
                         <img src="./src/img/about__2.webp" alt="About_Main_Img" class="w-full md:w-auto">
                         <img src="./src/img/about__small__img__2.webp" alt="About_Icon"
                                 class="absolute top-10 md:top-16 right-10 md:right-40 w-16 md:w-auto">
-                        <h2 class="text-5xl md:text-8xl font-bold absolute bottom-6 md:bottom-10">About Us</h2>
+                        <h2 class="text-5xl 2xl:text-8xl font-bold absolute bottom-6 2xl:bottom-10">About Us</h2>
                 </div>
 
                 <div class="w-full h-full space-y-6 lg:space-y-8 px-4 lg:px-0">
@@ -145,7 +145,7 @@
                                 About Company </button>
                         <h2 class="text-2xl lg:text-4xl font-bold leading-8 lg:leading-12"> QUALITY CONSULTATION FOR
                                 SECURE BUSINESS. WE HAVE 32 YEARS OF EXPERIENCE. </h2>
-                        <div class="flex flex-col md:flex-row gap-5 md:gap-10">
+                        <div class="flex flex-col lg:flex-row gap-5 md:gap-10">
                                 <div
                                         class="w-full md:w-1/3 h-fit relative gradient-bg py-6 md:py-10 rounded-lg text-center">
                                         <i class="fa-solid fa-arrow-up absolute top-4 md:top-7 right-6 md:right-12 text-lg rotate-45"
@@ -183,7 +183,7 @@
                         </h2>
                 </div>
 
-                <div class="flex flex-col lg:flex-row justify-between items-center gap-10 space-y-5 lg:space-y-0">
+                <div class="flex flex-col xl:flex-row justify-between items-center gap-10 space-y-5 lg:space-y-0">
                         <div
                                 class="w-96 h-full bg-white py-12 px-14 flex flex-col rounded-lg space-y-6 hover:bg-gradient-to-r hover:from-[#00229e] hover:via-[#6e1299] hover:via-[#610c88] hover:to-[#fe0094] transition duration-300">
                                 <div class="flex justify-between items-center">
@@ -235,8 +235,8 @@
                 </div>
 
 
-                <div class="w-full lg:h-[90vh] flex justify-center items-center lg:px-80 lg:py-44 p-4">
-                        <div class="relative w-full h-full bg-cover bg-center bg-blend-overlay bg-[#0c0e2baf] shadow-2xl shadow-purple-900/10 rounded-lg"
+                <div class="w-full 2xl:h-[90vh] flex justify-center items-center 2xl:px-80 lg:py-44 p-4">
+                        <div class="relative w-full h-full bg-cover bg-blend-overlay bg-[#0c0e2baf] shadow-2xl shadow-purple-900/10 rounded-lg"
                                 style="background-image: url('/src/img/video__3.webp');">
                                 <h2 class="text-6xl lg:text-9xl px-8 lg:px-28 py-28 z-10 text-white stroke-text">
                                         INTRO <br> <span class="px-44">VIDEO</span>
@@ -315,7 +315,7 @@
                 </div>
 
 
-                <div class="flex flex-col lg:flex-row space-y-20 gap-10 lg:mt-40 justify-center items-center mt-24">
+                <div class="flex flex-col xl:flex-row space-y-20 gap-10 lg:mt-40 justify-center items-center mt-24">
 
                         <div
                                 class="h-80 w-72 bg-white border border-purple-400/20 rounded-lg relative pt-36 px-10 space-y-2 ">
@@ -417,7 +417,7 @@
 
 
                 <div
-                        class="w-[78vw] bg-white px-7 py-16 lg:px-28 lg:py-20 lg:absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10 rounded-lg">
+                        class="w-[78vw] bg-white px-7 py-16 2xl:px-28 2xl:py-20 2xl:absolute top-[20%] right-[12%] shadow-2xl shadow-purple-400/10 flex flex-col justify-between items-center space-y-10 rounded-lg">
 
                         <div class="flex flex-col lg:flex-row justify-between items-center gap-10 space-y-8">
                                 <div class="w-full">
@@ -504,7 +504,7 @@
 
         <!-- Testimonial Section Start  -->
         <section
-                class="w-full h-full flex-col justify-center items-center px-10 lg:px-72 text-center bg-white text-black py-20 border-t border-dashed border-purple-400/20 ">
+                class="w-full h-full flex-col justify-center items-center px-10 2xl:px-72 text-center bg-white text-black py-20 border-t border-dashed border-purple-400/20 ">
                 <div class="flex flex-col justify-center items-center space-y-6 relative">
                         <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg">Happy
                                 Customers</button>
@@ -558,7 +558,7 @@
         <!-- Testimonial Section End  -->
 
         <!-- Blogs Section Start  -->
-        <section class="w-full h-auto text-black px-10 lg:px-72"
+        <section class="w-full h-auto text-black px-10 2xl:px-72"
                 style="background-image: url('/src/img/blog__bg.png');">
                 <div class="w-full flex flex-col justify-between items-center pt-20 pb-32">
 
@@ -647,7 +647,7 @@
         <!-- Blogs Section End  -->
 
         <!-- Footer Start  -->
-        <footer class="bg-[#fff0fa] p-10 lg:pt-40 lg:px-72">
+        <footer class="bg-[#fff0fa] p-10 2xl:pt-40 2xl:px-72">
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 text-black pb-24 gap-8">
 
                         <!-- Logo & Socials -->
@@ -684,7 +684,7 @@
 
                                 <!-- Quick Links -->
                                 <div class="text-center sm:text-left">
-                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">QUICK LINKS :</h3>
+                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">QUICK LINKS</h3>
                                         <ul class="space-y-4 text-black text-start">
                                                 <li><a href="#" class="hover:text-white font-medium text-lg">Privacy &
                                                                 policy</a></li>
@@ -701,7 +701,7 @@
 
                                 <!-- Subscription -->
                                 <div class="text-center sm:text-left space-y-6">
-                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">SUBSCRIBE NEWSLETTER :</h3>
+                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">SUBSCRIBE NEWSLETTER</h3>
                                         <input type="email" placeholder="Enter your email"
                                                 class="w-full px-4 py-2 rounded-md bg-white text-black/80">
                                         <button
@@ -712,7 +712,7 @@
 
                                 <!-- Gallery -->
                                 <div class="text-center sm:text-left block md:hidden lg:block">
-                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">OUR GALLERY:</h3>
+                                        <h3 class="w-fit font-bold mb-6 border-b-2 text-lg">OUR GALLERY</h3>
                                         <div class="grid grid-cols-3 gap-2 justify-center sm:justify-start">
                                                 <img src="src/img/footer__Small__1.webp" alt="Gallery"
                                                         class="w-20 h-20 rounded-md">
@@ -735,9 +735,9 @@
         <!-- Footer End  -->
 
         <!-- Bottom Bar -->
-        <div class="p-4 lg:p-0 lg:pl-72 bg-main flex justify-between items-center text-sm relative">
-                <div class="lg:w-2/5 h-full">
-                        <p class="text-white font-semibold text-lg">Copyright © 2025 <span
+        <div class="p-4 lg:p-0 2xl:pl-72 bg-main flex justify-between items-center text-sm relative">
+                <div class="2xl:w-2/5 h-full">
+                        <p class="text-white font-semibold text-lg px-10 2xl:px-0">Copyright © 2025 <span
                                         class="font-bold text-purple-800">BASTUN.</span> All Right Reserved </p>
                         <p
                                 class="md:hidden block p-4 mt-2 w-full gradient-bg rounded-xl text-white text-center text-lg">
@@ -746,7 +746,7 @@
                         </p>
                 </div>
 
-                <div class="w-1 h-[90px] bg-white absolute left-[50%] -bottom-1 rotate-[28deg] z-100 hidden lg:block">
+                <div class="w-1 h-[90px] bg-white absolute left-[50%] -bottom-1 rotate-[28deg] z-100 hidden 2xl:block">
                 </div>
                 <div class="relative w-3/5 h-full text-end hidden lg:block">
                         <div class="gradient-bg text-lg font-semibold text-white py-6 px-6 relative z-10"
@@ -770,16 +770,20 @@
                         var navbar = document.getElementById("navbar");
                         var navbar_2 = document.getElementById("navbar_main");
 
-                        if (window.scrollY > 50) {
-                                navbar.classList.remove("lg:px-72");
-                                navbar_2.classList.add("lg:px-72", "fixed", "top-0");
-                                navbar_2.classList.remove("lg:rounded-lg");
-                        } else {
-                                navbar.classList.add("lg:px-72");
-                                navbar_2.classList.remove("lg:px-72", "fixed", "top-0", "lg:rounded-lg");
-                                navbar_2.classList.add("lg:rounded-lg");
+                        // Check if the screen size is XL (>= 1280px)
+                        if (window.innerWidth >= 1280) {
+                                if (window.scrollY > 50) {
+                                        navbar.classList.remove("2xl:px-72");
+                                        navbar_2.classList.add("2xl:px-72", "fixed", "top-0");
+                                        navbar_2.classList.remove("lg:rounded-lg");
+                                } else {
+                                        navbar.classList.add("2xl:px-72");
+                                        navbar_2.classList.remove("2xl:px-72", "fixed", "top-0", "lg:rounded-lg");
+                                        navbar_2.classList.add("lg:rounded-lg");
+                                }
                         }
                 });
+
         </script>
 
 </body>
