--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="./src/css/output.css" rel="stylesheet">
 </head>
 
-<body class="w-full overflow-x-hidden bg-white">
+<body class="w-full overflow-x-hidden bg-white flex flex-col justify-between items-center">
         <!-- Top Section Start  -->
         <section id="topbar" class="w-full h-fit fixed hidden lg:flex justify-center items-center z-100">
                 <ul class="w-1/2 text-black flex justify-between">
@@ -80,7 +80,7 @@
                 <div
                         class="w-full md:w-1/2 text-black flex flex-col justify-center items-start px-6 2xl:pl-72 space-y-6 md:space-y-10 py-10 md:py-0">
                         <h1 class="text-4xl md:text-5xl 2xl:text-7xl font-bold">NAVIGATION SUCCESS TOGETHER</h1>
-                        <p class="font-semibold text-lg md:text-xl pr-4 md:pr-40"> Sagittis purus amet volutpat
+                        <p class="font-semibold text-lg md:text-xl pr-4 lg:pr-40"> Sagittis purus amet volutpat
                                 consequat mauris nunc congue nisi and tortor. </p>
                         <button
                                 class="gradient-bg text-sm md:text-[13px] font-bold font-serif py-3 md:py-4 px-8 md:px-10 rounded-lg text-white">
@@ -103,7 +103,7 @@
         <!-- hero section end  -->
 
         <!-- Logo Carousel Animation Start  -->
-        <div class="w-screen flex items-center relative -top-5">
+        <div class="w-screen flex items-center relative -bottom-5 2xl:-top-5">
                 <div class="bg-main w-full py-6 md:py-10 flex flex-nowrap rotate-1 overflow-hidden">
                         <!-- Marquee Container -->
                         <div
@@ -239,7 +239,7 @@
                         <div class="relative w-full h-full bg-cover bg-blend-overlay bg-[#0c0e2baf] shadow-2xl shadow-purple-900/10 rounded-lg"
                                 style="background-image: url('/src/img/video__3.webp');">
                                 <h2 class="text-6xl lg:text-9xl px-8 lg:px-28 py-28 z-10 text-white stroke-text">
-                                        INTRO <br> <span class="px-44">VIDEO</span>
+                                        INTRO <br> <span class="2xl:px-44">VIDEO</span>
                                 </h2>
 
                                 <style>
@@ -304,7 +304,8 @@
         <!-- Statstics Section End -->
 
         <!-- Team Section Start  -->
-        <section class="lg:px-72 text-center bg-white text-black py-20 flex flex-col justify-center items-center">
+        <section
+                class="w-full lg:px-72 text-center bg-white text-black py-20 flex flex-col justify-center items-center">
 
                 <div class="flex flex-col justify-center items-center space-y-8">
                         <button class="border border-purple-400/20 rounded-full px-7 py-1 text-lg gradient-icon">Our
@@ -518,35 +519,39 @@
                 <div
                         class="w-full flex flex-col lg:flex-row justify-center items-center gap-10 mt-10 mb-20 space-y-10 lg:space-y-0">
 
-                        <div class="lg:h-80 lg:w-1/2 bg-[#fff0fa] rounded-lg p-10">
+                        <div class=" 2xl:h-80 lg:w-1/2 bg-[#fff0fa] rounded-lg p-10">
                                 <p
                                         class="text-[21px] font-medium italic underline tracking-wider leading-10 text-black/60">
                                         Lorem
                                         ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veniam rerum nemo
                                         dolore eaque. Lorem ipsum dolor sit amet.</p>
                                 <div
-                                        class="flex justify-between items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
+                                        class="flex justify-evenly items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
                                         <img src="./src/img/testimonial__3.webp" alt="Image_testimonial">
-                                        <p class="text-start text-2xl font-bold">MATTIE WARNER <br><span
-                                                        class="text-lg font-normal gradient-icon">Business Man</span>
+                                        <p class="text-start text-lg md:text-2xl font-bold">MATTIE WARNER <br><span
+                                                        class="text-sm md:text-lg font-normal gradient-icon">Business
+                                                        Man</span>
                                         </p>
-                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes">
+                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes"
+                                                class="hidden md:block ">
                                 </div>
                         </div>
 
-                        <div class="lg:h-80 lg:w-1/2 bg-[#fff0fa] rounded-lg p-10">
+                        <div class=" 2xl:h-80 lg:w-1/2 bg-[#fff0fa] rounded-lg p-10">
                                 <p
                                         class="text-[21px] font-medium italic underline tracking-wider leading-10 text-black/60">
                                         Lorem
                                         ipsum dolor sit amet consectetur adipisicing elit. Quibusdam veniam rerum nemo
                                         dolore eaque. Lorem ipsum dolor sit amet.</p>
                                 <div
-                                        class="flex justify-between items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
+                                        class="flex justify-evenly items-center border-t border-dashed border-purple-400/20 mt-10 p-4">
                                         <img src="./src/img/testimonial__3.webp" alt="Image_testimonial">
-                                        <p class="text-start text-2xl font-bold">MATTIE WARNER <br><span
-                                                        class="text-lg font-normal gradient-icon">Business Man</span>
+                                        <p class="text-start text-lg md:text-2xl font-bold">MATTIE WARNER <br><span
+                                                        class="text-sm md:text-lg font-normal gradient-icon">Business
+                                                        Man</span>
                                         </p>
-                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes">
+                                        <img src="./src/img/testimonial__small__img__3.webp" alt="Quotes"
+                                                class="hidden md:block ">
                                 </div>
                         </div>
 
@@ -647,7 +652,7 @@
         <!-- Blogs Section End  -->
 
         <!-- Footer Start  -->
-        <footer class="bg-[#fff0fa] p-10 2xl:pt-40 2xl:px-72">
+        <footer class="w-full bg-[#fff0fa] p-10 2xl:pt-40 2xl:px-72">
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-5 text-black pb-24 gap-8">
 
                         <!-- Logo & Socials -->
@@ -735,7 +740,7 @@
         <!-- Footer End  -->
 
         <!-- Bottom Bar -->
-        <div class="p-4 lg:p-0 2xl:pl-72 bg-main flex justify-between items-center text-sm relative">
+        <div class="w-full p-4 lg:p-0 2xl:pl-72 bg-main flex justify-between items-center text-sm relative">
                 <div class="2xl:w-2/5 h-full">
                         <p class="text-white font-semibold text-lg px-10 2xl:px-0">Copyright © 2025 <span
                                         class="font-bold text-purple-800">BASTUN.</span> All Right Reserved </p>
